tests/spec/compile-fail/033_dynamic_generic_interface_method.zn
// category: compile-fail
// profile: freestanding
// purpose: method-level generic interface methods are static-only requirements

module tests.fail.dynamicGenericInterfaceMethod;

interface Mapper {
    fn map<T: Copy>(self, value: T) -> T;
}

fn bad(mapper: Box<Mapper>) -> U32 {
    return mapper.map(1); // expected-error: generic interface method cannot be dynamically dispatched
}
